assignment_3/backend.yaml
apiVersion: v1
kind: Pod

metadata:
  name: backend
  namespace: assignment3
  labels:
    app: backend

spec:
  containers:
  - name: backend
    image: nginx
