assignment_3/default-deny.yaml
apiVersion: v1
kind: Pod

metadata:
  name: database
  namespace: assignment3
  labels:
    app: database

spec:
  containers:
  - name: database
    image: nginx
