assignment_3/frontend.yaml
apiVersion: v1
kind: Pod

metadata:
  name: frontend
  namespace: assignment3
  labels:
    app: frontend

spec:
  containers:
  - name: frontend
    image: nginx
